--- a/gol-backend/Cargo.toml
+++ b/gol-backend/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gol-backend"
 license = "MIT"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
 edition = "2018"
 
@@ -9,7 +9,7 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["console_error_panic_hook"]
+default = ["console_error_panic_hook", "wee_alloc"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
@@ -17,9 +17,6 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 
 # Requires nightly
 wee_alloc = { version = "0.4.5", optional = true }
-
-[dev-dependencies]
-wasm-bindgen-test = "0.3.13"
 
 [profile.release]
 opt-level = "s"
