chore: fix deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
         
       - name: Cache rust
-      - uses: actions/cache@v2
+        uses: actions/cache@v2
         with:
           path: |
             ~/.cargo/bin/
