--- a/gol-backend/Cargo.toml
+++ b/gol-backend/Cargo.toml
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook", "wee_alloc"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
+js-sys = "0.3.53"
 console_error_panic_hook = { version = "0.1.6", optional = true }
 
 # Requires nightly
