--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "rsw:build": "rsw && npm run build",
     "serve": "vite preview"
   },
+  "dependencies": {
+    "gol-backend": "file:.rsw/crates/gol-backend/pkg"
+  },
   "devDependencies": {
-    "rsw-node": "1.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.1",
-    "vite-plugin-rsw": "1.9.0"
-  },
-  "dependencies": {
+    "vite-plugin-rsw": "1.9.0",
     "gol-backend": "file:gol-backend/pkg"
   }
 }
